# brainco-revo3-sdk

./: .gitignore  README.md  download-lib.sh
c/: Makefile  README.md
c/common/: revo3_common.cpp  revo3_common.h
c/demo/: auto_detect.cpp  hand_demo.cpp  hand_dfu.cpp  hand_trajectory.cpp  revo3_monitor.cpp  revo3_motor.cpp  revo3_ota_resource.cpp  revo3_servo.cpp  revo3_touch.cpp
docs/device/: REVO3_MOTOR_API.md  REVO3_TOUCH_API.md
python/: README.md  common_imports.py  common_init.py  common_socketcan.py  common_utils.py  install_whl.sh  pyproject.toml  requirements.txt
python/gui/: README.md  README.zh.md  __init__.py  connection_panel.py  constants.py  data_collector_panel.py  dfu_panel.py  i18n.py  main.py  main_window.py  mock_device.py  motor_config_panel_revo3.py  motor_control_panel_revo3.py  requirements.txt  shared_data.py  styles.py  system_config_panel.py  teaching_panel.py  timing_test_panel.py  timing_test_revo3_worker.py  touch_chart_force6d.py  touch_common.py  touch_panel_revo3.py
python/revo3/: README.md  auto_detect.py  hand_demo.py  hand_dfu.py  hand_trajectory.py  jitter_analysis.py  revo3_benchmark.py  revo3_dfu.py  revo3_finger_simple.py  revo3_joint_map.md  revo3_motor.py  revo3_ota_resource.py  revo3_servo.py  revo3_teaching.py  revo3_timing_test.py  revo3_trajectory.py  revo3_utils.py  teaching_mode_design.md
python/revo3/mit_debug/: README.md  plot_log.py  quintic_trajectory.h  test_traj.c  tracking.py  trajectory.py  trajectory_to_c.py
