[project]
name = "revo3-examples"
version = "1.3.7"
description = "BrainCo Revo3 SDK Python Examples"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bc-revo3-sdk>=1.3.7",
    "colorlog>=6.9.0",
    "numpy<2.0.0",
    "PySide6>=6.5.0",
    "pyqtgraph>=0.13.0",
    # "PyOpenGL>=3.1.5", # Optional: Only required for VisionTouch (Device 22) 3D point cloud visualization
    "pyserial>=3.5",
    "qasync>=0.24.0",
]

[tool.uv]
package = false
